<resources>

    <string name="app_name">Fussball</string>
    <string name="empty"></string>

    <string name="hint_email">Your email</string>
    <string name="hint_email_or_nick">Your email or nick</string>
    <string name="hint_nick">Your nick</string>
    <string name="hint_password">Your password</string>
    <string name="hint_player1_score">Player #1 score</string>
    <string name="hint_player2_score">Player #2 score</string>
    
    <string name="ok">OK</string>
    <string name="enter">ENTER</string>
    <string name="or_register">OR REGISTER</string>
    
    <string name="auth_in_progress">Authentication...</string>
    <string name="registration_in_progress">Registration...</string>
    <string name="new_game_in_progress">Creating new game...</string>
    
    <string name="tab_players">Players</string>
    <string name="tab_games">Games</string>
    
    <string name="menu_new_game">New game</string>
    <string name="played_won">played/won:</string>
    <string name="played_won_delimeter">/</string>
    
    <string name="select_player">Select player</string>
    <string name="select_player1">Select player #1</string>
    <string name="select_player2">Select player #2</string>
    
    <string name="permission_write_database_label">Write Fussball database</string>
    <string name="permission_write_database_description">Write players data to Fussball database</string>
    
    <string name="widget_title">Fussball Rating</string>
    
</resources>
