<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/registration_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:layout_margin="8dp" />
    
    <EditText
        android:id="@+id/registration_nick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nick"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:layout_margin="8dp" />

    <EditText
        android:id="@+id/registration_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:layout_margin="8dp" />

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ok" 
        android:padding="10dp"/>
    
    
</LinearLayout>
